enable DesktopGL PublishTrimmed and PublishAot

--- a/src/ContentBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net8.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net8.csproj
@@ -9,6 +9,8 @@
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
+    <PublishTrimmed>True</PublishTrimmed>
+    <PublishAot>True</PublishAot>
     <KniPlatform>DesktopGL</KniPlatform>
   </PropertyGroup>
   <PropertyGroup>
