--- a/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net8.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.DesktopGL/Benchmarks.Kni.DesktopGL.net8.csproj
@@ -7,6 +7,8 @@
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
     <OutputType>WinExe</OutputType>
+    <PublishTrimmed>True</PublishTrimmed>
+    <PublishAot>True</PublishAot>
     <RootNamespace>Benchmarks</RootNamespace>
     <AssemblyName>Benchmarks</AssemblyName>
     <OutputPath>..\bin\$(Configuration)\net8\Kni.DesktopGL\</OutputPath>
