--- a/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.WindowsDX/Benchmarks.Kni.WindowsDX.net4.csproj
@@ -45,13 +45,15 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="3.11.9002" />
-    <PackageReference Include="nkast.Xna.Framework.Content" Version="3.11.9002" />
-    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="3.11.9002" />
-    <PackageReference Include="nkast.Xna.Framework.Audio" Version="3.11.9002" />
-    <PackageReference Include="nkast.Xna.Framework.Media" Version="3.11.9002" />
-    <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.11.9002" />
-    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.11.9002" />
+    <PackageReference Include="nkast.Xna.Framework" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Audio" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Media" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Input" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Game" Version="3.12.9001" />
+    <PackageReference Include="MonoGame.Framework.WindowsDX.9000" Version="3.12.9001" />
+    <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="3.12.9001" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
