--- a/src/ContentBenchmarks/BenchmarksContent/.gitignore
+++ b/src/ContentBenchmarks/BenchmarksContent/.gitignore
@@ -1,5 +1,6 @@
 
 BenchmarksFonts/Font1*.spritefont
+BenchmarksModels/Model*.fbx
 BenchmarksSounds/Sound1*.wav
 BenchmarksTextures/Tx1*.png
 BenchmarksEffects/Effect*.fx
