--- a/src/ContentBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net8.csproj
+++ b/src/ContentBenchmarks/Benchmarks.Kni.Android/Benchmarks.Kni.Android.net8.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <EnableDefaultItems>false</EnableDefaultItems>
@@ -22,17 +22,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Content" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Devices" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Audio" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Media" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Input" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Game" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Storage" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.XR" Version="4.2.9001" />
-    <PackageReference Include="nkast.Kni.Platform.Android.GL" Version="4.2.9001.*" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework\Xna.Framework.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Content\Xna.Framework.Content.csproj" />
+	<ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Devices\Xna.Framework.Devices.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Graphics\Xna.Framework.Graphics.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Audio\Xna.Framework.Audio.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Media\Xna.Framework.Media.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Input\Xna.Framework.Input.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Game\Xna.Framework.Game.csproj" />
+	<ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Storage\Xna.Framework.Storage.csproj" />	  
+	<ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.XR\Xna.Framework.XR.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\Platforms\XNA.Framework.Android.csproj" />
     <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="4.2.9001" />
   </ItemGroup>
   <ItemGroup>
