--- a/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net8.csproj
+++ b/src/DrawBenchmarks/Benchmarks.Kni.BlazorGL/Benchmarks.BlazorGL.net8.csproj
@@ -24,17 +24,17 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="nkast.Xna.Framework" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Content" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Devices" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Graphics" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Audio" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Media" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Input" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Game" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.Storage" Version="4.2.9001" />
-    <PackageReference Include="nkast.Xna.Framework.XR" Version="4.2.9001" />
-    <PackageReference Include="nkast.Kni.Platform.Blazor.GL" Version="4.2.9001.*" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework\Xna.Framework.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Content\Xna.Framework.Content.csproj" />
+	<ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Devices\Xna.Framework.Devices.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Graphics\Xna.Framework.Graphics.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Audio\Xna.Framework.Audio.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Media\Xna.Framework.Media.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Input\Xna.Framework.Input.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Game\Xna.Framework.Game.csproj" />
+	<ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.Storage\Xna.Framework.Storage.csproj" />	  
+	<ProjectReference Include="X:\kniEngine\kni\src\Xna.Framework.XR\Xna.Framework.XR.csproj" />
+    <ProjectReference Include="X:\kniEngine\kni\Platforms\Kni.Platform.Blazor.GL.csproj" />
     <PackageReference Include="nkast.Xna.Framework.Content.Pipeline.Builder" Version="4.2.9001" />
   </ItemGroup>
 
